syntax = "proto3";
package api;
message Setting{
  bool isDarkMode = 1;
}