syntax = "proto3";
package api;
message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  int64 lastLoginTimestamp = 5;
}

message RegisterList{
  repeated User user = 1;
}