syntax = "proto3";
package login;
message LoginInfo{
  int32 id = 1;
}

message RememberAccount{
  int32 userId = 1;
}